// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders collapsed 1`] = `
<div
  className="box collapsed-box"
>
  <div
    key=".0"
  />
</div>
`;

exports[`renders default 1`] = `
<div
  className="box"
>
  <div
    key=".0"
  />
</div>
`;

exports[`renders overlay without wrapper 1`] = `
<div
  className="box"
>
  <Overlay
    dark={false}
    disableWrapper={true}
    isOverlay={true}
    key=".0"
  >
    <div />
  </Overlay>
</div>
`;

exports[`renders solid 1`] = `
<div
  className="box box-solid"
>
  <div
    key=".0"
  />
</div>
`;

exports[`renders with style 1`] = `
<div
  className="box box-default"
>
  <div
    key=".0"
  />
</div>
`;
